edit the colour of button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="node_modules/jspanel3/source/jquery.jspanel.css">
 </head>
 <body>
-  <button onclick="panel()">123123</button>
+  <button onclick="panel()" style="background-color: red;">123123</button>
   <div id="jspanel-func" class="panel-body" style="display:none">
 
   </div>
