--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <button onclick="panel()" style="background-color: red;">123123</button>
+  <div class="box" style="width: 100px;height: 100px;background-color: green;"></div>
   <div id="jspanel-func" class="panel-body" style="display:none">
 
   </div>
